--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -29,7 +29,7 @@
 
         <net.gsantner.markor.ui.hleditor.HighlightingEditor
             android:id="@+id/document__fragment__edit__highlighting_editor"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:gravity="top"
@@ -39,9 +39,9 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingBottom="120dp"
-            android:scrollbars="vertical"
             android:textCursorDrawable="@drawable/cursor_accent"
             tools:ignore="UnusedAttribute" />
+
     </net.gsantner.markor.ui.DraggableScrollbarScrollView>
 
     <HorizontalScrollView
