--- a/app/src/main/res/layout/document__fragment__share_into.xml
+++ b/app/src/main/res/layout/document__fragment__share_into.xml
@@ -30,7 +30,7 @@
         <net.gsantner.markor.ui.hleditor.HighlightingEditor
             android:id="@+id/document__fragment__share_into__highlighting_editor"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:fontFamily="sans-serif-light"
             android:gravity="top"
