Smooth horizontal scrolling / non-wrapping with full lines (by @harshad1, fixes #973) (PR #975)

--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -30,7 +30,7 @@
         <net.gsantner.markor.ui.hleditor.HighlightingEditor
             android:id="@+id/document__fragment__edit__highlighting_editor"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@android:color/transparent"
             android:gravity="top"
             android:imeOptions="flagNoExtractUi"
@@ -42,6 +42,7 @@
             android:scrollbars="vertical"
             android:textCursorDrawable="@drawable/cursor_accent"
             tools:ignore="UnusedAttribute" />
+
     </net.gsantner.markor.ui.DraggableScrollbarScrollView>
 
     <HorizontalScrollView
