--- a/app/src/main/res/layout/document__activity.xml
+++ b/app/src/main/res/layout/document__activity.xml
@@ -32,7 +32,7 @@
             <TextView
                 android:id="@+id/note__activity__text_note_title"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:fontFamily="sans-serif-medium"
                 android:scrollHorizontally="true"
