Revert "Auto-hide bottomnav when software keyboard is shown"
This reverts commit 6c425013de8544a2801a103f677ba09533a1c37f.

--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -34,7 +34,7 @@
             android:background="@android:color/transparent"
             android:gravity="top"
             android:imeOptions="flagNoExtractUi"
-            android:inputType="textFilter|textMultiLine|textCapSentences"
+            android:inputType="textMultiLine|textCapSentences"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
