--- a/app/src/main/res/layout/action_order_item.xml
+++ b/app/src/main/res/layout/action_order_item.xml
@@ -19,14 +19,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/end_icon"
-        android:layout_toLeftOf="@id/end_icon"
+        android:layout_toStartOf="@id/enable_switch"
+        android:layout_toLeftOf="@id/enable_switch"
         android:layout_toEndOf="@id/start_icon"
         android:layout_toRightOf="@id/start_icon"
         android:color="@color/primary_text"
         android:paddingStart="@dimen/appbar_padding_top"
         android:paddingEnd="@dimen/appbar_padding_top"
         android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
+
+    <Switch
+        android:id="@+id/enable_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toStartOf="@id/end_icon"
+        android:layout_toLeftOf="@id/end_icon"
+        android:text="@string/enable_action" />
 
     <ImageView
         android:id="@+id/end_icon"
