Changed id and desc string names

--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -208,7 +208,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pref_key__is_keep_screen_on" translatable="false">pref_key__keep_screen_on</string>
 
     <string name="tmaid_common_delete_lines" translatable="false">tmaid_common_delete_lines</string>
-    <string name="tmaid_common_next_line" translatable="false">tmaid_common_next_line</string>
+    <string name="tmaid_common_new_line_below" translatable="false">tmaid_common_new_line_below</string>
     <string name="tmaid_common_attach_something" translatable="false">tmaid_common_attach_something</string>
     <string name="tmaid_common_unordered_list_char" translatable="false">tmaid_common_unordered_list_char</string>
     <string name="tmaid_common_ordered_list_number" translatable="false">tmaid_common_ordered_list_number</string>
