zimwiki(new files): create new zim text files with header, title and creation date according to typed file name

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -59,6 +59,7 @@
         <item translatable="false">@string/markdown</item>
         <item translatable="false">@string/plaintext</item>
         <item translatable="false">@string/todo_txt</item>
+        <item translatable="false">@string/zim_wiki</item>
         <item translatable="false">@string/none</item>
     </string-array>
 
@@ -77,6 +78,7 @@
         <item translatable="false">.md</item>
         <item translatable="false">.txt</item>
         <item translatable="false">.todo.txt</item>
+        <item translatable="false">.txt</item>
         <item translatable="false" />
     </string-array>
 
