--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -239,17 +239,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tmaid_markdown_insert_link" translatable="false">tmaid_markdown_insert_link</string>
     <string name="tmaid_markdown_table_insert_columns" translatable="false">tmaid_markdown_table_insert_columns</string>
 
-    <string name="tmaid_zimwiki_h1">tmaid_zimwiki_h1</string>
-    <string name="tmaid_zimwiki_h2">tmaid_zimwiki_h2</string>
-    <string name="tmaid_zimwiki_h3">tmaid_zimwiki_h3</string>
-    <string name="tmaid_zimwiki_h4">tmaid_zimwiki_h4</string>
-    <string name="tmaid_zimwiki_h5">tmaid_zimwiki_h5</string>
-    <string name="tmaid_zimwiki_bold">tmaid_zimwiki_bold</string>
-    <string name="tmaid_zimwiki_italic">tmaid_zimwiki_italic</string>
-    <string name="tmaid_zimwiki_mark" translatable="false">tmaid_zimwiki_mark</string>
-    <string name="tmaid_zimwiki_strikeout">tmaid_zimwiki_strikeout</string>
-    <string name="tmaid_zimwiki_code_inline">tmaid_zimwiki_code_inline</string>
-    <string name="tmaid_zimwiki_insert_link">tmaid_zimwiki_insert_link</string>
+    <string name="tmaid_zimwiki_h1" translatable="false">tmaid_zimwiki_h1</string>
+    <string name="tmaid_zimwiki_h2" translatable="false">tmaid_zimwiki_h2</string>
+    <string name="tmaid_zimwiki_h3" translatable="false">tmaid_zimwiki_h3</string>
+    <string name="tmaid_zimwiki_h4" translatable="false">tmaid_zimwiki_h4</string>
+    <string name="tmaid_zimwiki_h5" translatable="false">tmaid_zimwiki_h5</string>
+    <string name="tmaid_zimwiki_bold" translatable="false">tmaid_zimwiki_bold</string>
+    <string name="tmaid_zimwiki_italic" translatable="false">tmaid_zimwiki_italic</string>
+    <string name="tmaid_zimwiki_highlight" translatable="false">tmaid_zimwiki_highlight</string>
+    <string name="tmaid_zimwiki_strikeout" translatable="false">tmaid_zimwiki_strikeout</string>
+    <string name="tmaid_zimwiki_code_inline" translatable="false">tmaid_zimwiki_code_inline</string>
+    <string name="tmaid_zimwiki_insert_link" translatable="false">tmaid_zimwiki_insert_link</string>
     <string name="tmaid_zimwiki_insert_image" translatable="false">tmaid_zimwiki_insert_image</string>
 
     <string name="tmaid_todotxt_toggle_done" translatable="false">tmaid_todotxt_toggle_done</string>
@@ -307,7 +307,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="pref_key__file_browser_last_browsed_folder" translatable="false">pref_key__file_browser_last_browsed_folder</string>
     <string name="select_current_line" translatable="false">Select current line(s)</string>
     <string name="pref_key__file_description_format" translatable="false">pref_key__file_description_format</string>
-    <string name="pref_key__editor_zimwiki_bigger_headings">pref_key__editor_zimwiki_bigger_headings</string>
+    <string name="pref_key__editor_zimwiki_bigger_headings" translatable="false">pref_key__editor_zimwiki_bigger_headings</string>
     <string name="pref_key__zimwiki__reorder_actions" translatable="false">pref_key__zimwiki__reorder_actions</string>
     <string name="pref_key__zimwiki__action_keys" translatable="false">pref_key__zimwiki__action_keys</string>
 </resources>
