Editor Search & replace (#1112 by @harshad1 closes #155)
---------------------------

* Layout and resources
* Working search and replace
* Pulled files from upstream
* Before switching to a plain textview
* Switching to a class based approach
* Object based and with history
* Tweaks
* Simpler history
* More expansive exception type
* Updated found matches to not use %
* Added unescaper
* Added fix for initial action order
* Added default groups

Co-authored-by: Gregor Santner <gsantner@mailbox.org>

--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -114,6 +114,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tags" translatable="false">Tags</string>
     <string name="dotfiles" translatable="false">.dotfiles</string>
     <string name="tagging" translatable="false">Tagging</string>
+    <string name="regex" translatable="false">Regex</string>
+    <string name="multiline" translatable="false">Multiline</string>
 
 
     <!--
