Rework ZimWiki NewFile handling

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -70,7 +70,8 @@
         <item translatable="false">@string/file_template__md_jekyll_post</item>
         <item translatable="false">@string/file_template__md_cooking_recipe</item>
         <item translatable="false">@string/file_template__md_presentation_beamer</item>
-        <item translatable="false">@string/file_template__txt_zim_wiki</item>
+        <item translatable="false">@string/file_template__zim_wiki_reference</item>
+        <item translatable="false">@string/file_template__zim_wiki_empty</item>
         <item translatable="false">@string/file_template__md_hugo_post_front_matter</item>
     </string-array>
 
@@ -78,7 +79,7 @@
         <item translatable="false">.md</item>
         <item translatable="false">.txt</item>
         <item translatable="false">.todo.txt</item>
-        <item translatable="false">.txt</item>
+        <item translatable="false">.zim.txt</item>
         <item translatable="false" />
     </string-array>
 
